--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,18 @@
     <title></title>
   </head>
   <body>
-    <h1>Test</h1>
+    <h1>Basic Chat</h1>
+
+    <ul>
+
+    </ul>
+
+    <input type="text" name="name" value="">
+    <button type="button" name="button">Chat</button>
+
 
 
     <script src="/socket.io/socket.io.js" charset="utf-8"></script>
-    <script src="/javascrpts/sockets.js" charset="utf-8"></script>
+    <script src="/javascripts/sockets.js" charset="utf-8"></script>
   </body>
 </html>
