--- a/public/index.html
+++ b/public/index.html
@@ -5,18 +5,6 @@
     <title></title>
   </head>
   <body>
-    <h1>Basic Chat</h1>
-
-    <ul>
-
-    </ul>
-
-    <input type="text" name="name" value="">
-    <button type="button" name="button">Chat</button>
-
-
-
-    <script src="/socket.io/socket.io.js" charset="utf-8"></script>
-    <script src="/javascripts/sockets.js" charset="utf-8"></script>
+    <h1>Placeholder</h1>
   </body>
 </html>
