--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,46 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <h1>Placeholder</h1>
-  </body>
+<!--[if lt IE 7 ]> <html lang="en" class="ie6" > <![endif]-->
+<!--[if IE 7 ]>    <html lang="en" class="ie7" > <![endif]-->
+<!--[if IE 8 ]>    <html lang="en" class="ie8" > <![endif]-->
+<!--[if IE 9 ]>    <html lang="en" class="ie9" > <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--> <html lang="en" class="" > <!--<![endif]-->
+<head>
+  <meta charset="utf-8">
+  <title>Aviator app</title>
+
+  
+  
+
+  
+  <link href="style.54596705bc0f68f4b24d.css" rel="stylesheet">
+  
+
+  
+
+</head>
+<body>
+
+
+
+<div id="app"></div>
+
+
+
+
+
+
+
+<script src="manifest.e5a4acc9a3059d20e154.js"></script>
+
+<script src="vendor.beadc131b88ef7d315e7.js"></script>
+
+<script src="style.54596705bc0f68f4b24d.js"></script>
+
+<script src="app.8b43a2433f363ccb5a21.js"></script>
+
+
+
+
+
+</body>
 </html>
