--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,14 @@
   <meta charset="utf-8">
   <title>Aviator app</title>
 
-  
-  
 
-  
-  <link href="style.b3207a65a6d47d63818e.css" rel="stylesheet">
-  
 
-  
+
+
+  <link href="/resources/style.b3207a65a6d47d63818e.css" rel="stylesheet">
+
+
+
 
 </head>
 <body>
@@ -30,13 +30,13 @@
 
 
 
-<script src="manifest.725975dcf4583416fc32.js"></script>
+<script src="/resources/manifest.725975dcf4583416fc32.js"></script>
 
-<script src="vendor.121f0e40583a7b742c5a.js"></script>
+<script src="/resources/vendor.121f0e40583a7b742c5a.js"></script>
 
-<script src="style.b3207a65a6d47d63818e.js"></script>
+<script src="/resources/style.b3207a65a6d47d63818e.js"></script>
 
-<script src="app.6551c9f9ed3ac257d6c2.js"></script>
+<script src="/resources/app.6551c9f9ed3ac257d6c2.js"></script>
 
 
 
