--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
 
 
-
+  <link rel="icon" type="image/png" href="/resources/favicon-plane.ico">
   <link href="/resources/style.ec8ae529a3d97b2af8dc.css" rel="stylesheet">
 
 
